tests/NormalTests/paczka2/big_fuzzy/68398345.err
Error in line 15: vyhTPu9E A966 216,2
Error in line 30: jT3 S612 42,5
Error in line 33: jT3 A122 47,3
Error in line 37: Eu0PlBWT S612 42,6
Error in line 40: RtKn1EhVyta S798 71,2
Error in line 49: jT3 S612 35,01
Error in line 36: jT3 S798 8,1
Error in line 50: jT3 A966 40,5
Error in line 53: vyhTPu9E A966 44,2
Error in line 61: vyhTPu9E A122 46,7
Error in line 80: A966 S612 85,1
Error in line 77: jT3 S798 44,2
Error in line 87: RtKn1EhVyta A122 29,5
Error in line 86: jT3 S612 29,9
Error in line 95: Eu0PlBWT A966 69,2
Error in line 89: RtKn1EhVyta S612 47,4
Error in line 102: RtKn1EhVyta S611 19,1
Error in line 100: Eu0PlBWT S612 95,7
Error in line 103: RtKn1EhVyta S612 64,6
Error in line 114: A966 A122 64,5
Error in line 120: Eu0PlBWT S612 31,0
Error in line 125: INP2J5wds S612 9,4
Error in line 96: jT3 A122 137,1
Error in line 122: jw5lXSr2WL S798 21,3
Error in line 135: vyhTPu9E S612 71,4
Error in line 146: A966 A122 54,5
Error in line 154: jw5lXSr2WL A122 54,0
Error in line 157: jw5lXSr2WL A966 85,1
Error in line 153: jT3 A966 37,3
Error in line 159: jw5lXSr2WL S798 74,2
Error in line 161: INP2J5wds S798 18,6
Error in line 164: jw5lXSr2WL A966 81,6
Error in line 172: INP2J5wds A966 49,8
Error in line 175: jT3 A966 53,4
Error in line 184: jw5lXSr2WL A966 15,0
Error in line 186: RtKn1EhVyta S612 16,6
Error in line 178: vyhTPu9E A122 40,6
Error in line 182: INP2J5wds S798 38,3
Error in line 190: INP2J5wds S612 81,7
Error in line 185: jw5lXSr2WL A122 45,6
Error in line 199: jw5lXSr2WL A966 92,6
Error in line 198: jT3 A966 90,7
Error in line 216: Eu0PlBWT A966 -2,6
Error in line 215: INP2J5wds A122 28,6
Error in line 225: A966 A122 83,7
Error in line 231: vyhTPu9E S798 79,9
Error in line 230: A966 S798 92,9
Error in line 239: A966 A122 20,7
Error in line 244: A966 A122 65,70
Error in line 213: Eu0PlBWT A966 70,5
